--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,8 @@ services:
                         - 127.0.0.1:9090:9090
                 volumes:
                         - ./prometheus.yml:/etc/prometheus/prometheus.yml
+
+        zipkin:
+                image: openzipkin/zipkin:2.14.0
+                ports:
+                        - 127.0.0.1:9411:9411
