--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,18 @@
-version: '3.7'
+version: '3.8'
 services:
         prom:
-                image: prom/prometheus:v2.10.0
+                image: prom/prometheus:v2.40.7
                 ports:
                         - 127.0.0.1:9090:9090
                 volumes:
                         - ./prometheus.yml:/etc/prometheus/prometheus.yml
 
         zipkin:
-                image: openzipkin/zipkin:2.14.0
+                image: openzipkin/zipkin:2.24.0
                 ports:
                         - 127.0.0.1:9411:9411
+        grafana:
+                # Default username/password is admin/admin
+                image: grafana/grafana:9.3.2
+                ports:
+                        - 127.0.0.1:3000:3000
